fix: project list alignment

--- a/styles.css
+++ b/styles.css
@@ -148,3 +148,7 @@ footer .link {
 footer ul {
     padding-inline-start: 0;
 }
+
+.project-list {
+    padding-inline-start: 0;
+}
